tests/errors/calls/call-literal.fn
---
Description: Calling an integer literal
Expected: FN3404
---

type Program
{
    fn Main -> i32
    {
        return 5(1)
    }
}
